--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 
   </head>
 <body>
-  <a href="C:\Users\killua\Desktop\CSC457\Project\website\loginpage\login.html">here</a>
+  <a href="loginpage\login.html">here</a>
 </body>
